fix(techs-style): adjust z-index for tech cards to prevent overlap

--- a/src/components/features/techs/styles/techs-style.css
+++ b/src/components/features/techs/styles/techs-style.css
@@ -11,6 +11,7 @@
 #techsCarrousel .carrouselGroup .card {
   min-width: 160px;
   padding-right: 22px;
+  z-index: -10;
 }
 
 #techsCarrousel::-webkit-scrollbar {
